src/objects/Seeding__c.object
<CustomObject>
    <description>Score Tracker for seeded devices. Used by the enterprise sales and business solutions advisory team (BSA).</description>
    <fields>
        <fullName>BLUR_CorporateSync__c</fullName>
        <description>CorporateSync field from BLUR report.</description>
        <label>BLUR CorporateSync</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLUR_Created__c</fullName>
        <description>Created Date from the BLUR Report</description>
        <label>BLUR Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLUR_Last_Date__c</fullName>
        <description>Last Date field from the BLUR report.</description>
        <label>BLUR Last Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BLUR_State__c</fullName>
        <description>State field from BLUR report.</description>
        <label>BLUR_State</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact name</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Seeding Records</relationshipLabel>
        <relationshipName>Seeding_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Trained__c</fullName>
        <description>Date Trained</description>
        <label>Date Trained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Used__c</fullName>
        <description>How many days has the device been used?</description>
        <label>Days Used</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <description>Is this contact a &apos;do not contact&apos;?</description>
        <label>Do Not Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Score</description>
        <label>Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seeding_Campaign__c</fullName>
        <description>Seeding Campaign (Carrier and Product)</description>
        <label>Seeding Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>AT&amp;T Atrix HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T Atrix HD - MAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the seeding event.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey 2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <description>What type of training did they receive for this device?</description>
        <label>Training Type</label>
        <picklist>
            <picklistValues>
                <fullName>F2F Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2F Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Seeding</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Device IMEI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seeding Records</pluralLabel>
    <recordTypes>
        <fullName>Seeding_Record_Type</fullName>
        <active>true</active>
        <description>Seeding Record Type</description>
        <label>Seeding Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>